# neulacpu

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/: common.h  devaddr.h
labus/: device.cc  memory.cc  serial.cc  sysbus.cc
labus/include/: device.hh  memory.hh  serial.hh  sysbus.hh
lacpu/: README.md
lacpu/doc/: design-初赛.docx  design.docx  mycpu性能计算.xlsx  流水线设计.vsdx
lacpu/rtl/: soc_lite_top.v  soc_lite_top.v.bram_bak
lacpu/rtl/cpu/: alu.v  axi_ctrl.v  bru.v  cache_tag.v  cpu_top.v  csr.hv  csr.v  exe_stage.v  forward.v  id_stage.v  if_stage.v  inst_decoder.v  loaduse.v  lsu.v  mem_stage.v  mul.v  mul_div_top.v  mycpu.h  mycpu.v  mycpu.vh  mycpu_core.v  mycpu_top.v  pip_ctrl.v  regfile.v  tools.v  wb_stage.v
lacpu/rtl/mycpu/: alu.v  axi_ctrl.v  bru.v  cache_data.v  csr.v  csr.vh  dcache.v  div.v  dt.v  dt_stage.v  exe_stage.v  forward.v  icache.v  id_stage.v  if_stage.v  inst_decoder.v  lsu.v  mem_stage.v  mmu.v  mul.v  mul_div_lock.v  mul_div_top.v  mycpu_core.v  mycpu_top.v  pip_ctrl.v  regfile.v  tlb.v  tools.v  uncache.v  wb_stage.v
lacpu/rtl/xilinx_ip/axi_ram/: axi_ram.xci
lacpu/rtl/xilinx_ip/clk_pll/: clk_pll.xci
lacpu/rtl/xilinx_ip/data_ram/: data_ram.coe  data_ram.xci
lacpu/rtl/xilinx_ip/data_sram_bank/: data_bram_bank.dcp  data_bram_bank.veo  data_bram_bank.vho  data_bram_bank.xci  data_bram_bank.xml  data_bram_bank_sim_netlist.v  data_bram_bank_sim_netlist.vhdl  data_bram_bank_stub.v  data_bram_bank_stub.vhdl
lacpu/rtl/xilinx_ip/data_sram_bank/sim/: data_bram_bank.v
lacpu/rtl/xilinx_ip/data_sram_bank/synth/: data_bram_bank.vhd
lacpu/rtl/xilinx_ip/div/: div.xci
lacpu/rtl/xilinx_ip/divu/: divu.xci
lacpu/rtl/xilinx_ip/inst_ram/: inst_ram.coe  inst_ram.xci
lacpu/run_vivado/: Nexys4DDR.xdc  soc_lite.xdc
lacpu/run_vivado/la32r/: la32r.xpr
lacpu/run_vivado/la32r/sim/: cpu_tb_behav.wcfg  soc_tb.v
laos/: CMakeLists.txt  Makefile  kernel.ld
laos/include/: asm.h  common.h  console.h  defs.h  dev.h  fcntl.h  filepath.h  kernel.h  kprintf.h  la32r.h  latype.h  macro.h  memio.h  memlayout.h  proc.h  spinlock.h  string.h  unistd.h
laos/src/: main.c
laos/src/dev/: Makefile  dev.c  serial.c
laos/src/kernel/: Makefile  console.c  entry.S  kalloc.c  kprintf.c  main.c  proc.c  spinlock.c  start.c  vm.c
laos/src/lib/: Makefile
laos/src/user/: Makefile  echo.c  xargs.c
laos/src/util/: Makefile  filepath.c  string.c
lasim/: la32r.cc  main.cc
lasim/include/: la32r.hh
lasoft/xv6-la/: Makefile  README
lasoft/xv6-la/kernel/: csr.h  entry.S  kernelvec.S  start.c
lavsim/: main.cc
vsrc/: top.v
